--- a/w3/index.html
+++ b/w3/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Week 3 Code Along - Primitives </title>
     <script src="main.js"></script>
+    <title>Week 3 - Cardon Footprint Household</title>
 </head>
 <body>
     <h1></h1>
