updated output to DOM

--- a/w4/index.html
+++ b/w4/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Week 3 Code Along - Primitives </title>
-    <script src="main.js"></script>
     <title>Week 4 - Carbon Footprint</title>
 </head>
 <body>
-    <h1></h1>
+    <div id = "output">
+
+    </div>
+    <script src="main.js"></script>
+
 </body>
 </html>
