updated output to DOM

--- a/w4/index.html
+++ b/w4/index.html
@@ -3,13 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Week 3 Code Along - Primitives </title>
     <title>Week 4 - Carbon Footprint</title>
 </head>
 <body>
-    <div id = "output">
-
-    </div>
+    <div id = "output"></div>
     <script src="main.js"></script>
 
 </body>
